[package]
name = "qnpm"
description = "A Node Package Manager written in Rust, made for but not yet achieved speed."
edition = "2021"
version = "0.0.1"
repository = "https://github.com/PressJump/qnpm"
license = "MIT"
authors = ["PressJump"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3.2.0"
async-recursion = "1.0.5"
tar = "0.4.40"
flate2 = "1.0.28"
url = "2.5.0"
dirs = "5.0.1"
async-std = "1.10"

# File parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = { version = "1.0" }
